kubernetes/identity-db-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: identity-db
spec:
  serviceName: identity-db
  replicas: 1
  template:
    metadata:
      labels:
        app: identity-db
    spec:
      containers:
      - name: identity-db
        image: localhost:32000/postgres:alpine
        ports:
        - name: postgresql
          containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data/pgdata
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      resources:
        requests:
          storage: 1Mi
      accessModes:
      - ReadWriteOnce
