kubernetes/iam-id-mgmt-api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-id-mgmt-api-service-nodeport
spec:
  type: NodePort
  selector:
    app: iam-id-mgmt-api-service
  ports:
  - name: http
    port: 2080
    targetPort: 2080
    nodePort: 32080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
