kubernetes/iam-id-mgmt-db-service-headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: iam-id-mgmt-db
spec:
  clusterIP: None
  selector:
    app: iam-id-mgmt-db
  ports:
  - name: pgsql
    port: 5432
