kubernetes/iam-id-mgmt-db-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-id-mgmt-db-service-public
spec:
  selector:
    app: iam-id-mgmt-db
  ports:
  - port: 5432
    targetPort: 5432
