kubernetes/identity-db-service-headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: identity-db
spec:
  clusterIP: None
  selector:
    app: identity-db
  ports:
  - name: pgsql
    port: 5432
