kubernetes/identity-db-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-db-service-public
spec:
  selector:
    app: identity-db
  ports:
  - port: 5432
    targetPort: 5432
