kubernetes/identitymanagement-api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: identitymanagement-api-service-nodeport
spec:
  type: NodePort
  selector:
    app: identitymanagement-api-service
  ports:
  - name: http
    port: 2083
    targetPort: 2083
    nodePort: 32080
