kubernetes/identitymanagement-api-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: identitymanagement-api-service-public
spec:
  type: ClusterIP
  selector:
    app: identitymanagement-api-service
  ports:
  - name: http
    port: 2083
    targetPort: 2083
  - name: https
    port: 443
    targetPort: 443
