kubernetes/identitymanagement-db-service-headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: identitymanagement-db
spec:
  clusterIP: None
  selector:
    app: identitymanagement-db
  ports:
  - name: pgsql
    port: 5432
