kubernetes/identitymanagement-db-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: identitymanagement-db-service-nodeport
spec:
  type: NodePort
  selector:
    app: identitymanagement-db
  ports:
  - name: pgsql
    port: 5432
    targetPort: 5432
    nodePort: 32432
