kubernetes/identitymanagement-db-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: identitymanagement-db-service-public
spec:
  selector:
    app: identitymanagement-db
  ports:
  - port: 5432
    targetPort: 5432
